# notion-to-focalboard

./: .gitignore  README.md  pyproject.toml
convert/: admin.py  models.py  urls.py  views.py
convert/management/commands/: convert.py
convert/migrations/: 0001_initial.py  0002_converttask_error_msg.py
convert/templates/convert/: base.html  convert.html  result.html
project/: asgi.py  settings.py  urls.py  wsgi.py
