[tool.poetry]
name = "notion-to-focalboard"
version = "0.1.0"
description = ""
authors = ["Mohammad Javad Naderi <mjnaderi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
